Enhanced Automatic Chat Animation Experience

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="styles/chat-animations.css">
     <link rel="stylesheet" href="styles/booking-popup.css">
+    <link rel="stylesheet" href="styles/paper-plane.css">
+    <link rel="stylesheet" href="styles/ending-animation.css">
 </head>
 <body>
     <!-- Floating Chat Button -->
